[package]
name = "euler_solutions"
version = "0.1.0"
authors = ["roycrippen <roycrippen@gmail.com>"]

[lib]
name = "euler_solutions"
path = "src/lib.rs"

[[bin]]
name = "eu_all"

[dependencies]
# clippy = "*"
primal = "*"
itertools = "*"
num = "*"
permutohedron = "*"
numerals = "*"
petgraph = "*"
rand = "*"

[dependencies.euler_library]
# git = "https://github.com/roycrippen/euler_library"
path = "/home/roy/rustProjects/crippen/euler/euler_library"
